# oxidar-wasm

./: .gitignore  README.md  build.sh  package.json
js/: package-lock.json
js/src/: App.jsx
rust/: Cargo.toml
rust/src/: error.rs  graphics.rs  lib.rs
rust/src/shaders/: vert.glsl
src/: App.jsx
wasm/: Cargo.toml
wasm/src/: error.rs  graphics.rs  lib.rs
wasm/src/shaders/: frag.glsl
