[package]
name = "ferris"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = [
    "cdylib", # Genera una biblioteca dinámica compatible con C (útil para WebAssembly, produce .wasm).
    "rlib",   # Formato nativo de Rust, útil para pruebas, herramientas internas y reutilización entre crates.
]

[dependencies]
log = "0.4.20"
console_log = "0.2.0" # Envia los logs a la console de Javascript
console_error_panic_hook = "0.1.7" # Envia los WASM panics a console.error de JavaScript.
js-sys = "0.3.77" # Bindings para interactuar con la API de JavaScript.
wasm-bindgen = "0.2.100" # Interconexion entre Rust y JavaScript
thiserror = "1.0.50"
once_cell = "1.18.0"
image = "0.25.6"

[dependencies.web-sys]
version = "0.3.69"
features = [
    "WebGlRenderingContext",
    "HtmlCanvasElement",
    "WebGlProgram",
    "Window",
    "Document",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlTexture",
    "WebGlUniformLocation",
]